Fixed overflow problem for payment modal

--- a/assets/scss/site/shortcode/_payment_modal.scss
+++ b/assets/scss/site/shortcode/_payment_modal.scss
@@ -15,6 +15,7 @@
 			.modal-body {
 				display: flex;
 				justify-content: center;
+				overflow: hidden;
 
 				.payment-modal--errors {
 					.alert {
